[package]
name = "mc-indexer-extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0"
reqwest = "0.11"

[workspace]
members = [
]

[workspace.package]
name = "mc-indexer-extractor"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"
homepage = "github.com/metacontract/indexer"
license = "MIT"
repository = "metacontract/indexer"

[workspace.lints]