cargo-features = ["edition2024"]

[package]
name = "mc-indexer-extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"
git2 = "0.18.3"
tempfile = "3.10.1"
dotenv = "0.15.0"

[workspace]
members = [
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.77.1"
homepage = "github.com/metacontract/indexer"
license = "MIT"
repository = "metacontract/indexer"

[workspace.lints]